Fix user profile content scroll on safari

--- a/src/screens/UserProfileDetail/style.css
+++ b/src/screens/UserProfileDetail/style.css
@@ -2,6 +2,8 @@
   background-color: rgb(248, 248, 249);
   overflow-x: hidden;
   height: 100vh;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .profile-header {
